bridge/base/server-expose.yaml
#! server-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: server
    namespace: docker-nodejs-sample
    labels:
        com.docker.compose.project: docker-nodejs-sample
        com.docker.compose.service: server
spec:
    selector:
        com.docker.compose.project: docker-nodejs-sample
        com.docker.compose.service: server
    ports:
        - name: server-3000
          port: 3000
          targetPort: server-3000
