bridge/base/server-service.yaml
# check if there is at least one published port

#! server-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: server-published
    namespace: docker-nodejs-sample
    labels:
        com.docker.compose.project: docker-nodejs-sample
        com.docker.compose.service: server
spec:
    selector:
        com.docker.compose.project: docker-nodejs-sample
        com.docker.compose.service: server
    ports:
        - name: server-3000
          port: 3000
          protocol: TCP
          targetPort: server-3000
